Enhance Netty WebSocket and multi-context architecture
- Support URI path templates and path parameters in Netty WebSocket endpoints
- Fix initial message drop by executing listener.onOpen() synchronously before adding wsHandler to pipeline
- Unify WebSocket buffer size and timeout configuration in NettyWebSocketSession and JsrWebSocketSession
- Enforce NettyContext-scoped NettyService lifecycle and remove legacy single-context constructors
- Define pipeline handler name constants across NettyChannelInitializer and NettyHttpHandler
- Support contextPath-relative path resolution in NettyResourceHandler
- Allow ServerEndpointExporter to accept ActivityContext directly